# pymsgraph_automate_emails

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  send_emails.py
src/extensions/jinja/: jinja_environment_extended.py
